--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 	  <url>https://github.com/avandeursen/jpacman-framework/issues</url>
 	</issueManagement>
 
+	<scm>
+	  <connection>scm:git:git://github.com/avandeursen/jpacman-framework.git</connection>
+	  <url>scm:git:git://github.com/avandeursen/jpacman-framework.git</url>
+	  <developerConnection>scm:git:git://github.com/avandeursen/jpacman-framework.git</developerConnection>
+	</scm>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
