--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>nl.tudelft.jpacman</groupId>
 	<artifactId>jpacman-framework</artifactId>
-	<version>5.3.0-SNAPSHOT</version>
+	<version>5.3.0</version>
 	<packaging>jar</packaging>
 
 	<name>jpacman-framework</name>
