Added Eclipse generated files to .git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 
 # All generated files will be in target thanks to the use of maven
 target/
+
+# for eclipse users
+.classpath
+.project
+.settings/
