--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
 	<artifactId>jpacman-framework</artifactId>
 	<version>5.3.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
+	
+	<prerequisites>
+		<maven>2.2.1</maven>
+	</prerequisites>
+	
 
 	<name>jpacman-framework</name>
 	<url>http://www.st.ewi.tudelft.nl/~arie/</url>
@@ -88,13 +93,13 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
+			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>1.9.5-rc1</version>
+			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -110,7 +115,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.0</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -119,7 +124,7 @@
 
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.3</version>
+				<version>2.4</version>
 				<configuration>
 					<descriptors>
 						<descriptor>${basedir}/src-assembly.xml</descriptor>
@@ -161,7 +166,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.2</version>
 				<configuration>
 					<reportPlugins>
 
@@ -239,7 +244,7 @@
 				-->
 				<groupId>org.pitest</groupId>
 				<artifactId>pitest-maven</artifactId>
-				<version>0.28</version>
+				<version>0.29</version>
 				<configuration>
 					<targetClasses>
 						<param>org.jpacman.framework.factory.DefaultGameFactory</param>
