--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>nl.tudelft.jpacman</groupId>
 	<artifactId>jpacman-framework</artifactId>
-	<version>5.6</version>
+	<version>5.7-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<prerequisites>
